--- a/global.css
+++ b/global.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   line-height: normal;
+  zoom: 1.1;
 }
 body {
   -moz-transform: scale(1.1); /* Firefox */
